test/langtools/tools/javac/8013179/T8013179.out
T8013179.java:13:37: compiler.err.bad.target.sigpoly.call: 1.6, 1.7
1 error
